SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  jedwards
Tag Date:    15 May 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130515
Tag Summary: Bugfix: test on edison was giving "variable used without being
             defined" error relating to dz_loc.

Files Modified:
M            47175   source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    01 May 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130501
Tag Summary: Updating a namelist variable default value.

Files Modified:
M            46612   source/ecosys_parms.F90
M            46612   bld/namelist_files/namelist_defaults_pop2.xml
===============================================================================
Tag Creator: mlevy
Developers:  mlevy, njn01, tcraig
Tag Date:    26 April 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130426
Tag Summary: A couple of small changes to avoid "invalid tavg id" error in
             vertical_mix.F90 and an error relating to passing a variable
             that hasn't been allocated in diagnostics.F90.

Files Modified:
M       source/diagnostics.F90
M       source/vertical_mix.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlong
Tag Date:    25 April 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130425b
Tag Summary: New CFC dataset (not bit-for-bit with previous dataset)

Files Modified:
M            46408   bld/namelist_files/namelist_defaults_pop2.xml
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    25 April 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130425a
Tag Summary: The best description is probably just to say this is version 2.0
             of ecosys_mod. There is no backwards compatibility, for ecosys