@@ -2,6 +2,16 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  klindsay
+Tag Date:    17 May 2013
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130517
+Tag Summary: Bugfix: split loops led to bad values of hfac_[tu] with partial
+             bottom cells turned on.
+
+Files Modified:
+M            47278   source/vertical_mix.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  jedwards
 Tag Date:    15 May 2013
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130515
